--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ ul {
 }
 a {
   text-decoration: none;
+  color: white;
 }
 h2, h1{
   margin: 20px 0px;
@@ -32,7 +33,6 @@ body {
   font-weight: bold;
 }
 .container{
-  /* min-width: 1000px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,22 +48,28 @@ nav{
   position: sticky;
   top: 0;
   left: 0;
-  background-color: #f4dc2aef;
+  background-color: var(--secondary-color);
   
   z-index: 1;
 
 }
 .logo-link{
-  flex-basis: 30%;
+  align-items: flex-end;
+
 }
 .logo {
   max-width: 250px;
 }
+
 .nav-list {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-right: 20px;
+  
+}
+.nav-container{
+  justify-content: space-between;
 }
 .nav-list li {
 width: 150px;
@@ -77,11 +83,11 @@ align-items: center;
   border-radius: 5px;
 }
 .nav-list li:hover {
-  background-color: var(--primary-color);
+  background-color: var(--highlighter-color);
   transition: all 0.3s ease-in-out;
 }
 .nav-list li:hover a{
-  color: white;
+  color: var(--primary-color);
   cursor: pointer;
 
 }
@@ -92,7 +98,7 @@ align-items: center;
   margin: 20px;
   
 }
-.header-content p{
+p{
   line-height: 25px;
   font-size: 20px;
 }
@@ -119,16 +125,14 @@ video {
   background-color:var(--secondary-color);
   border-radius: 10px;
   max-width:350px;
+  max-height: 600px;
   padding: 1rem;
   margin: 20px 30px;
-
-
 }
 .testimonial-content{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-
   align-items: center;
   position: relative;
   height: 250px;
@@ -147,9 +151,11 @@ font-size: 1.5rem;
   opacity: 0.5;
 }
 .fa-quote-right{
-  margin-left: 300px;}
+  margin-left: 280px;
+}
 .fa-quote-left{
-  margin-left: -300px;
+  margin-left: -280px;
+  margin-bottom: 40px;
 }
 .info{
   margin-top: 10px;
@@ -219,7 +225,6 @@ max-width: 500px;
   align-items: center;
 }
 .place-container{
-  border: solid #f4db2a 1px;
   width: 130px;
   height: 100px;
   margin: 20px;
@@ -231,8 +236,11 @@ max-width: 500px;
 .place-container i{
   color:var(--primary-color);
   font-size: 2rem;
+  margin-bottom: 0.5rem;
 }
-
+.content{
+  margin: 0px 20px;
+}
 footer{
   display: flex;
   justify-content: space-around;
@@ -240,15 +248,7 @@ footer{
   background-color: var(--secondary-color);
   color: white;
 }
-.download{
-  max-width: 250px;
-}
-.download-app, .follow{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
+
 .social-media{
   display: flex;
   justify-content:space-around;
@@ -261,8 +261,25 @@ footer{
   margin: 0px 20px;
   font-size: 2rem;
 }
+.logo-download{
+  max-width: 250px;
+}
+.btn{
+  width: 150px;
+height: 50px;
+margin: 20px 0px;
+border-radius: 5px;
+cursor: pointer;
+background-color: var(--secondary-color);
+color: white;
+font-weight: bold;
+padding: 0.5rem;
+}
+.btn:hover{
+  background-color: var(--highlighter-color);
+color:var(--primary-color);
 
-
+}
 
 /* Mobile */
 @media only screen and (max-width: 768px){
@@ -337,7 +354,7 @@ nav div{
   height: 5px;
   margin-top: 5px;
   width: 30px;
-  background-color: var(--primary-color);
+  background-color: var(--highlighter-color);
   transition: all 0.5s ease-in-out;
 
 
